--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jspdf": "^3.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-qr-code": "^2.0.15",
     "react-router-dom": "^7.5.0",
     "styled-components": "^6.1.17"
   },
