fix: admin panel

--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "dom-to-image-more": "^3.5.0",
     "firebase": "^11.6.0",
     "html5-qrcode": "^2.3.8",
     "jspdf": "^3.0.1",
+    "qrcode": "^1.5.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-qr-code": "^2.0.15",
