--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.49.4",
     "dom-to-image-more": "^3.5.0",
     "firebase": "^11.6.0",
     "html5-qrcode": "^2.3.8",
