--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase": "^11.6.0",
     "html5-qrcode": "^2.3.8",
     "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "qrcode": "^1.5.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
