--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.49.4",
     "dom-to-image-more": "^3.5.0",
+    "exceljs": "^4.4.0",
+    "file-saver": "^2.0.5",
     "firebase": "^11.6.0",
     "html5-qrcode": "^2.3.8",
     "jspdf": "^3.0.1",
